<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.masrafna.ui.navigation.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_fragment_home_to_fragment_news"
            app:destination="@id/nav_news_list"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
    </fragment>
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.masrafna.ui.navigation.contacts.ContactsFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.masrafna.ui.navigation.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_notification_list"
        android:name="com.example.masrafna.ui.navigation.notifications.NotificationsListFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications_list">

        <action
            android:id="@+id/action_fragment_notifications_list_to_fragment_notification"
            app:destination="@id/nav_notification"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left">
            <argument
                android:name="notification"
                app:argType="com.example.masrafna.data.models.NotificationModel"
                app:nullable="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.masrafna.ui.navigation.info.InfoFragment"
        android:label="@string/meet_masrafna"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/nav_terms"
        android:name="com.example.masrafna.ui.navigation.terms.TermsFragment"
        android:label="@string/terms"
        tools:layout="@layout/fragment_terms" />
    <fragment
        android:id="@+id/nav_news_list"
        android:name="com.example.masrafna.ui.navigation.news.NewsListFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news_list">
        <action
            android:id="@+id/action_fragment_news_list_to_fragment_news"
            app:destination="@id/nav_news"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left">
            <argument
                android:name="news"
                app:argType="com.example.masrafna.data.models.NewsModel"
                app:nullable="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.masrafna.ui.navigation.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news">
        <argument
            android:name="news"
            app:argType="com.example.masrafna.data.models.NewsModel"
            app:nullable="true" />
    </fragment>


    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.masrafna.ui.navigation.notifications.NotificationFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notification">
        <argument
            android:name="notification"
            app:argType="com.example.masrafna.data.models.NotificationModel"
            app:nullable="true" />
    </fragment>



</navigation>