<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loging.login.LoginFragment">


    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress_bar"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:elevation="16dp"
        android:visibility="gone"
        app:SpinKit_Color="#01BBFC" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        style="@style/Titles_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/welcome_again"
        android:textColor="@color/black"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone_no_et"
            style="@style/hint_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@null"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="16dp" />

        <EditText
            android:id="@+id/password_et"
            style="@style/hint_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@null"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <TextView
            android:id="@+id/forgot_password"
            style="@style/hint_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/forgot_password" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        style="@style/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/create_new_account"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/main_gradient"
        android:backgroundTint="@null"
        android:text="@string/confirm"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/create_new_account"
        style="@style/hint_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/create_new_account" />

</RelativeLayout>