<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.loging.login.ResetPasswordFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progress_bar"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="16dp"
            android:visibility="gone"
            app:SpinKit_Color="#01BBFC"
            android:layout_centerInParent="true"
            />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textStyle="bold"

            android:theme="@style/Titles_font" />


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reset_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:text="@string/enter_your_phone"
            android:theme="@style/hint_font" />


        <EditText
            android:id="@+id/phone_no_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@null"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="16dp"
            android:theme="@style/hint_font" />


        <TextView
            android:id="@+id/countre"
            style="@style/hint_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_no_et"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:text="@string/did_not_get_the_code"
            android:visibility="invisible" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_again_btn"
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countre"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:visibility="invisible"
            android:background="@drawable/main_gradient"
            android:backgroundTint="@null"
            android:paddingHorizontal="48dp"
            android:text="@string/send_again" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_btn"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_again_btn"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/main_gradient"
            android:backgroundTint="@null"
            android:text="@string/confirm" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>